Fix overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 html{
     max-width: 100vw;
     height: auto;
-    overflow-x: clip!important;
+    overflow-x: hidden!important;
     scroll-behavior: smooth;
 }
 
